--- a/set.env
+++ b/set.env
@@ -1,5 +1,5 @@
 # Command prefix used to trigger the bot
-PREFIX=.
+PREFIX=•
 
 # If set to "yes", the bot will automatically view all WhatsApp statuses
 AUTO_READ_STATUS=no
@@ -14,23 +14,23 @@ BOT_NAME=Zokou-MD
 MENU_THEME=LUFFY
 
 # If "no", commands won't work in private chats for others
-PM_PERMIT=no
+PM_PERMIT=yes
 
 # If "yes", the bot is available to everyone; if "no", only the owner can use it
-MODE_PUBLIC=yes
+MODE_PUBLIC=no
 
 # Controls the bot's visible activity:
 # 1 = online, 2 = typing, 3 = recording, empty = show real status
 PRESENCE=1
 
 # WhatsApp session ID (used to log in to your account)
-SESSION_ID=
+SESSION_ID=ZOKOU-MD-WHATSAPP-BOT=>d454960e64
 
 # Your display name (owner's name)
-OWNER_NAME=Djalega++
+OWNER_NAME=𝐊𝐢𝐧𝐠 𝐃𝐨𝐦𝐚🥷🏽🌟
 
 # Your phone number in international format (e.g., country code + number)
-OWNER_NUMBER=228 XX XX XX XX
+OWNER_NUMBER=509 41 46 98 08
 
 # Number of warnings before a user is penalized
 WARN_COUNT=3
@@ -42,10 +42,10 @@ STARTING_BOT_MESSAGE=yes
 PM_CHATBOT=no
 
 # If "yes", adds a delay between commands to prevent spamming
-ANTI_COMMAND_SPAM=no
+ANTI_COMMAND_SPAM=yes
 
 # If "yes", messages deleted by others will be sent to you privately
-ANTI_DELETE_MESSAGE=no
+ANTI_DELETE_MESSAGE=yes
 
 # If "yes", the bot automatically reacts to incoming messages
 AUTO_REACT_MESSAGE=no
@@ -60,4 +60,4 @@ TIME_ZONE=Africa/Sao_Tome
 SERVER=vps
 
 # Set a packname and author for your stickers
-STICKER_PACKNAME=made with ❤; ZOKOU-MD
+STICKER_PACKNAME=𝐊𝐢𝐧𝐠 𝐃𝐨𝐦𝐚🥷🏽🌟
